# kedro-viz

./: .babelrc  .eslintrc.json  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .lycheeignore  .npmignore  .prettierrc  .python-version  .readthedocs.yml  .snyk  .stylelintignore  .stylelintrc  .vale.ini  AI_PYTHON_REVIEW_REPORT.md  ARCHITECTURE.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.txt  INSPECTION_ADAPTER_PLAN.md  LAYOUT_ENGINE.md  LICENSE.md  Makefile  None  README.md  README.npm.md  RELEASE.md  STYLE_GUIDE.md  appveyor.yml  babel.config.json  cookiecutter-issue.md  cypress.config.js  data_loader.py.lprof  index.html  jest.config.js  legal_header.txt  licenses.json  mkdocs.yml  (+15 more)
demo-project/: .dockerignore  .gitignore  .pre-commit-config.yaml  .telemetry  Dockerfile  Makefile  README.md  Untitled.ipynb  databricks.yml  dummy_data.csv  generate_dummy_run_data.ipynb  lightsail.json  profile.speedscope.json  pyproject.toml  random.json  requirements.txt  ruff.toml  stats.json  viz_jupyter_test.ipynb
demo-project/.ipython/profile_default/startup/: 00-kedro-init.py
demo-project/.viz/: kedro_pipeline_events.json  stats.json  styles.json
demo-project/conf/: README.md
demo-project/conf/base/: catalog.yml  catalog_01_raw.yml  catalog_02_int.yml  catalog_03_prm.yml  catalog_04_feature.yml  catalog_05_model_input.yml  catalog_06_models.yml  catalog_08_reporting.yml  catalog_09_tracking.yml  catalog_globals.yml  globals.yml  logging.yml
demo-project/conf/base/parameters/: data_ingestion.yml  feature_engineering.yml  modelling.yml
demo-project/conf/dev/: catalog.yml
demo-project/conf/local/: credentials.yml
demo-project/conf/prod/: catalog_globals.yml  globals.yml
demo-project/conf/prod/parameters/: modelling.yml
demo-project/data/: session_store.db
demo-project/data/01_raw/: companies_json.json  sample_config.yml  sample_markdown.md
demo-project/data/08_reporting/: cancellation_breakdown.json  price_histogram.json  top_shuttle_data.json  top_shuttles_plot.json
demo-project/docs/source/: conf.py  index.rst
demo-project/notebooks/: customer_pipe.ipynb  customer_pipe.py
demo-project/src/: demo_requirements.txt  docker_requirements.txt  requirements.in  setup.py
demo-project/src/demo_project/: __init__.py  __main__.py  cli.py  hooks.py  pipeline_registry.py  requirements.in  settings.py  templated_config_loader.py
demo-project/src/tests/: test_run.py
demo-project/tests/: test_run.py
demo-project/tests/pipelines/data_science/: test_pipeline.py
package/: .coveragerc  .flake8  .isort.cfg  .pylintrc  None  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  test_requirements.txt
package/carbonviz/: server.py
package/features/: environment.py  ipython.feature  jupyter.feature  viz.feature
package/features/steps/: cli_steps.py  lower_requirements.txt  sh_run.py  util.py
package/kedro_viz/: __init__.py  api_schema.py  autoreload_file_filter.py  constants.py  database.py  load_data.py  models.py  repositories.py  responses.py  routers.py  serialisers.py  server.py  services.py  specs.py  utils.py
package/kedro_viz/api/: __init__.py  apps.py  data_provider.py  graphql.py  inspection_adapter_provider.py  responses.py  router.py  websockets.py
package/kedro_viz/api/graphql/: __init__.py  router.py  schema.py  serializers.py  types.py
package/kedro_viz/api/rest/: __init__.py  requests.py  responses.py  router.py  utils.py
package/kedro_viz/data_access/: __init__.py  managers.py  repositories.py
package/kedro_viz/docs/: architecture.drawio  technical_design_expand_collapse_modular_pipelines.md
package/kedro_viz/html/: 404.html  asset-manifest.json  index.html
package/kedro_viz/integrations/: __init__.py  utils.py
package/kedro_viz/launchers/: __init__.py  cli.py  experimental_viz.py  jupyter.py  notebook_visualizer.py  utils.py
package/kedro_viz/migrations/: 1.sql
package/kedro_viz/models/: __init__.py  experiment_tracking.py  experiments_tracking.py  flowchart.py  flowchart_pydantic.py  graph.py  metadata.py  run_model.py  session.py  sql_models.py  utils.py
package/kedro_viz/services/: __init__.py  events_store.py  layers.py  modular_pipelines.py
package/kedro_viz/utils/: api_tools.py
package/kedroviz/: plugin.py  server.py
package/kernelviz/: __main__.py  plugin.py  server.py
package/kernelviz/tests/: test_server.py
package/temp.json/2022-07-28T09.47.28.688Z/: temp.json
package/tests/: conftest.py  example_json.py  example_pipelines.json  input.json  result.json  test-data.json  test-format.json  test_autoreload_file_filter.py  test_import.py  test_server.py  test_utils.py
package/tests/test_api/: __init__.py  example_pipelines.json  expected_modular_pipeline_tree_for_edge_cases  main  test_apps.py  test_data_provider.py  test_graphql.py
package/tests/test_data_access/: expected_tree_for_edge_cases  test_managers.py  test_repositories.py
package/tests/test_inspection_adapter/: README.md  capture_baseline.py  conftest.py  test_export.py  test_graph_builder.py  test_graph_builder_edge_cases.py  test_id_lockstep.py  test_ids.py  test_inspection_adapter_provider.py  test_layers.py  test_lite_metadata.py  test_metadata_bridge.py  test_provider_graph_enrichment.py  test_router_flag_on.py  test_snapshot_source.py
package/tests/test_integrations/: conftest.py  test_abstract_dataset_lite.py  test_aws_deployer.py  test_azure_deployer.py  test_base_deployer.py  test_blah.py  test_data_catalog_lite.py  test_data_loader.py  test_deployer_factory.py  test_gcp_deployer.py  test_hooks.py  test_hooks_utils.py  test_kedro_data_loader.py  test_lite_parser.py  test_local_deployer.py  test_notebook_visualizer.py  test_pypi.py  test_run_hooks.py  test_s3_deployer.py  test_sqlite_store.py  test_telemetry.py
package/tests/test_launchers/: __init__.py  test_cli.py  test_jupyter.py  test_notebook_visualizer.py  test_utils.py
package/tests/test_models/: test_flowchart.py  test_metadata.py  test_utils.py
package/tests/test_services/: test_layers.py  test_modular_pipelines.py
(+1879 files in other folders)
