[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "kedro-viz"
authors = [
    {name = "Kedro"}
]
description = "Kedro-Viz helps visualise Kedro data and analytics pipelines"
requires-python = ">=3.9"
keywords = [
    "pipelines",
    "machine learning",
    "data pipelines",
    "data science",
    "data engineering",
    "visualisation",
]
license = {text = "Apache Software License (Apache 2.0)"}
dynamic = ["dependencies", "readme", "version"]

[project.urls]
Homepage = "https://kedro.org"
Source = "https://github.com/kedro-org/kedro-viz"
Documentation = "https://docs.kedro.org"
Tracker = "https://github.com/kedro-org/kedro-viz/issues"

[project.optional-dependencies]
docs = [
    "myst-parser<2.1,>=1.0",
    "sphinx-notfound-page",
    "sphinx<7.3,>=5.3",
    "sphinx_copybutton==0.5.2",
    "sphinx_rtd_theme==1.3.0"
]
aws = ["s3fs>=2021.4"]
azure = ["adlfs>=2021.4"]
gcp = ["gcsfs>=2021.4"]

[project.entry-points."kedro.global_commands"]
kedro-viz = "kedro_viz.launchers.cli:viz_cli"

[project.entry-points."kedro.line_magic"]
line_magic = "kedro_viz.launchers.jupyter:run_viz"

[project.entry-points."kedro.hooks"]
kedro-dataset-stats = "kedro_viz.integrations.kedro.hooks:dataset_stats_hook"

[tool.setuptools]
zip-safe = false

[tools.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["kedro_viz*"]
exclude=["tests*", "features*"]

[tool.pytest.ini_options]
addopts ="""
--verbose -ra 
--cov-report xml:coverage.xml 
--cov-report term-missing 
--cov kedro_viz 
--ignore package/tests 
--no-cov-on-fail 
-ra 
--asyncio-mode auto"""
testpaths = [
  "tests"
]
